Some functional bug fixed

--- a/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
+++ b/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
@@ -255,7 +255,7 @@
                     showBoqDivisionList.append("<option selected disabled>===Select BoQ Division===</option>");
                     $.each(data, function (index, item) {
                         showBoqDivisionList.append($('<option>', {
-                            value: item.BoQDivisionId,
+                            value: item.BoqDivisionId,
                             text: item.Name
                         }));
                     });
