--- a/KGERP/Views/BillRequisition/BillRequisitionItemBoQMap.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionItemBoQMap.cshtml
@@ -326,7 +326,7 @@
 
                             $.each(data, function (index, item) {
                                 showBoqDivisionList.append($('<option>', {
-                                    value: item.BoQDivisionId,
+                                    value: item.BoqDivisionId,
                                     text: item.Name
                                 }));
                             });
@@ -467,7 +467,7 @@
 
                         $.each(data, function (index, item) {
                             showBoqDivisionList.append($('<option>', {
-                                value: item.BoQDivisionId,
+                                value: item.BoqDivisionId,
                                 text: item.Name
                             }));
                         });
