--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -897,7 +897,7 @@
 
                         $.each(data, function (index, item) {
                             showBoqDivisionList.append($('<option>', {
-                                value: item.BoQDivisionId,
+                                value: item.BoqDivisionId,
                                 text: item.Name
                             }));
                         });
@@ -1005,7 +1005,7 @@
 
                     $.each(data, function (index, item) {
                         showBoqDivisionList.append($('<option>', {
-                            value: item.BoQDivisionId,
+                            value: item.BoqDivisionId,
                             text: item.Name
                         }));
                     });
